--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <nav>
         <h1>ASHOK <br> YADAV-</h1>
-         <svg class="header_back__30UYF" xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 62 62">
+        <svg class="header_back__30UYF" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 62">
             <g fill="white" fill-rule="nonzero">
                 <path
                     d="M31 .5C14.155.5.5 14.155.5 31S14.155 61.5 31 61.5 61.5 47.845 61.5 31 47.845.5 31 .5zm0 1c16.292 0 29.5 13.208 29.5 29.5S47.292 60.5 31 60.5 1.5 47.292 1.5 31 14.708 1.5 31 1.5z">
@@ -28,9 +27,15 @@
     <main>
         <section class="page1">
             <div class="hero-pic">
-                <img src="./images/background-image.png" alt="">
-                <video height="100%" width="100%" autoplay muted loop preload="auto"
-                    src="./videos/background-video.mp4"></video>
+                <video autoplay muted loop preload="auto"
+                src="./videos/background-video.mp4"></video>
+                <img src="./images/background-image.png" alt="ASHOK YADAV">
+                <div class="scroll-div">
+                    <h1> 🚀 Welcome to My Portfolio! 🚀 • Creative Mern-Stack Developer • Turning Ideas into Reality
+                        • Let's Build Something Amazing Together! •</h1>
+                    <h1> 🚀 Welcome to My Portfolio! 🚀 • Creative Mern-Stack Developer • Turning Ideas into Reality
+                        • Let's Build Something Amazing Together! •</h1>
+                </div>
             </div>
         </section>
         <section class="page2">
