--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <main>
         <section class="page1">
             <div class="hero-pic">
-                <video autoplay muted loop preload="auto"
-                src="./videos/background-video.mp4"></video>
+                <video autoplay muted loop preload="auto" src="./videos/background-video.mp4"></video>
                 <img src="./images/background-image.png" alt="ASHOK YADAV">
                 <div class="scroll-div">
                     <h1> 🚀 Welcome to My Portfolio! 🚀 • Creative Mern-Stack Developer • Turning Ideas into Reality
@@ -39,7 +38,70 @@
             </div>
         </section>
         <section class="page2">
-            
+            <div class="about-me">
+                <h1 class="page2-heading" >[ I design & build experiences ]</h1>
+                <div class="about-container">
+                    <h1><strong>About_Me</strong></h1>
+                    <p class="about-p1">
+                        Hey there! I'm <strong>Ashok Yadav</strong>, a young, dynamic, and enthusiastic individual.
+                        I'm a lifelong learner with an insatiable
+                        passion for exploring new opportunities in the ever-evolving tech field. Known for my strong
+                        work ethic and attention to detail, I thrive on challenges and love turning ideas into reality.
+                    </p>
+                    <p class="about-p2">
+                        <strong>What I Bring to the Table:</strong><br />
+                        - A solid foundation in Computer Science and Programming Languages like java<br />
+                        -  <span class="mern">Mern-Stack Development</span> skills including <span class="about-skill">HTML, CSS, JavaScript, React.js, Node.js, Express.js,
+                        MongoDB and Tailwind CSS</span><br />
+                        - A creative mindset and a knack for problem-solving
+                    </p>
+
+                    <p class="about-p3">
+                        <strong>In My Personal Life:</strong><br />
+                        I'm open-minded, always eager to embrace new perspectives, and believe in continuous growth.
+                    </p>
+                    <p class="about-p4">
+                        <strong>Let's Connect!</strong><br />
+                        I'm excited to connect with like-minded professionals and learn from their experiences. Let's
+                        collaborate, innovate, and grow together!
+                    </p>
+                </div>
+            </div>
+
+        </section>
+        <section class="page3">
+            <div class="page3-left">
+                <h1>🎓 Diploma in Computer Science </h1>
+                <h1>2018-2021</h1>
+                <p>
+                    <!-- Diploma in Computer Science Engineering -->
+
+                    🏫 Education:- I pursued my Diploma in Computer Science Engineering at People's University from 2018
+                    to 2021, where
+                    I developed a strong foundation in software development and programming concepts. With a CGPA of
+                    7.67, I focused on building practical knowledge through projects and coursework. During this period,
+                    I discovered my passion for frontend development, gaining hands-on experience with HTML, CSS,
+                    JavaScript, and React.js. This journey shaped my ability to design responsive and interactive web
+                    applications, while also improving my problem-solving and analytical thinking skills.
+                </p>
+
+            </div>
+            <div class="page3-right">
+                <h1>🎓 Bachelor of Technology </h1>
+                <h1>2021-2024</h1>
+                <p>
+                    <!-- 🎓 Bachelor of Technology in Computer Science Engineering -->
+
+                    🏫 Education:- I pursued my Bachelor of Technology in Computer Science Engineering at Sagar
+                    Institute of Research & Technology - Excellence From 2021 to 2024. With a CGPA of 6.99, my degree
+                    allowed me to deepen
+                    my understanding of computer science fundamentals while specializing in MERN stack development. I
+                    mastered technologies such as React.js, Node.js, Express.js, and MongoDB, which enabled me to build
+                    full-stack, scalable, and dynamic web applications. Throughout my academic journey, I not only
+                    strengthened my technical expertise but also enhanced my teamwork, communication, and project
+                    management skills through various academic projects and real-world problem-solving experiences.
+                </p>
+            </div>
         </section>
     </main>
 </body>
