Add new font and images; update index and style for portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Ashok Yadav | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
@@ -26,9 +26,11 @@
     </nav>
     <main>
         <section class="page1">
-            <div class="hero-pic">
-                <video autoplay muted loop preload="auto" src="./videos/background-video.mp4"></video>
-                <img src="./images/background-image.png" alt="ASHOK YADAV">
+            <video autoplay muted loop preload="auto" src="./videos/background-video.mp4"></video>
+            <img src="./images/background-image.png" alt="ASHOK YADAV">
+        </section>
+        <section class="page2">
+            <div class="page2-container">
                 <div class="scroll-div">
                     <h1> 🚀 Welcome to My Portfolio! 🚀 • Creative Mern-Stack Developer • Turning Ideas into Reality
                         • Let's Build Something Amazing Together! •</h1>
@@ -37,9 +39,9 @@
                 </div>
             </div>
         </section>
-        <section class="page2">
+        <section class="page3">
             <div class="about-me">
-                <h1 class="page2-heading" >[ I design & build experiences ]</h1>
+                <h1 class="page3-heading">[ I design & build experiences ]</h1>
                 <div class="about-container">
                     <h1><strong>About_Me</strong></h1>
                     <p class="about-p1">
@@ -51,8 +53,9 @@
                     <p class="about-p2">
                         <strong>What I Bring to the Table:</strong><br />
                         - A solid foundation in Computer Science and Programming Languages like java<br />
-                        -  <span class="mern">Mern-Stack Development</span> skills including <span class="about-skill">HTML, CSS, JavaScript, React.js, Node.js, Express.js,
-                        MongoDB and Tailwind CSS</span><br />
+                        - <span class="mern">Mern-Stack Development</span> skills including <span
+                            class="about-skill">HTML, CSS, JavaScript, React.js, Node.js, Express.js,
+                            MongoDB and Tailwind CSS</span><br />
                         - A creative mindset and a knack for problem-solving
                     </p>
 
@@ -67,42 +70,61 @@
                     </p>
                 </div>
             </div>
-
-        </section>
-        <section class="page3">
-            <div class="page3-left">
-                <h1>🎓 Diploma in Computer Science </h1>
-                <h1>2018-2021</h1>
-                <p>
-                    <!-- Diploma in Computer Science Engineering -->
-
-                    🏫 Education:- I pursued my Diploma in Computer Science Engineering at People's University from 2018
-                    to 2021, where
-                    I developed a strong foundation in software development and programming concepts. With a CGPA of
-                    7.67, I focused on building practical knowledge through projects and coursework. During this period,
-                    I discovered my passion for frontend development, gaining hands-on experience with HTML, CSS,
-                    JavaScript, and React.js. This journey shaped my ability to design responsive and interactive web
-                    applications, while also improving my problem-solving and analytical thinking skills.
-                </p>
-
-            </div>
-            <div class="page3-right">
-                <h1>🎓 Bachelor of Technology </h1>
-                <h1>2021-2024</h1>
-                <p>
-                    <!-- 🎓 Bachelor of Technology in Computer Science Engineering -->
-
-                    🏫 Education:- I pursued my Bachelor of Technology in Computer Science Engineering at Sagar
-                    Institute of Research & Technology - Excellence From 2021 to 2024. With a CGPA of 6.99, my degree
-                    allowed me to deepen
-                    my understanding of computer science fundamentals while specializing in MERN stack development. I
-                    mastered technologies such as React.js, Node.js, Express.js, and MongoDB, which enabled me to build
-                    full-stack, scalable, and dynamic web applications. Throughout my academic journey, I not only
-                    strengthened my technical expertise but also enhanced my teamwork, communication, and project
-                    management skills through various academic projects and real-world problem-solving experiences.
-                </p>
+            <div class="icons-container">
+                <div class="icons-cont-1">
+                    <img height="80px" src="./images/vs-icon.png" alt="vs-code-image">
+                    <img height="100px" src="./images/html-icon.png" alt="html-image">
+                </div>
+                <div class="icons-cont-2">
+                    <img height="110px" src="./images/css-icon.png" alt="css-image">
+                    <img height="100px" src="./images/js-icon.webp" alt="js-image">
+                </div>
             </div>
         </section>
+        <section class="page4">
+            <div class="page4-top">
+                <div class="page4-top-left" >
+                    <h1>Education</h1>
+                </div>
+                <div class="page4-arrow">
+                    <img src="./images/arrow.png" alt="arrow">
+                </div>
+                <div page4-top-right>
+                    <h1>Qualifications</h1>
+                </div>
+            </div>
+            <div class="page4-bottom">
+                <div class="page4-left">
+                    <h1>🎓 Diploma in Computer Science </h1>
+                    <h2>2018-2021</h2>
+                    <p>
+    
+                        🏫 Education:- I pursued my Diploma in Computer Science Engineering at People's University from 2018
+                        to 2021, where
+                        I developed a strong foundation in software development and programming concepts. With a CGPA of
+                        7.67, I focused on building practical knowledge through projects and coursework. During this period,
+                        I discovered my passion for frontend development, gaining hands-on experience with HTML, CSS,
+                        JavaScript, and React.js. This journey shaped my ability to design responsive and interactive web
+                        applications, while also improving my problem-solving and analytical thinking skills.
+                    </p>
+                </div> 
+                 <div class="page4-right">
+                    <h1>🎓 Bachelor of Technology </h1>
+                    <h2>2021-2024</h2>
+                    <p>
+    
+                        🏫 Education:- I pursued my Bachelor of Technology in Computer Science Engineering at Sagar
+                        Institute of Research & Technology - Excellence From 2021 to 2024. With a CGPA of 6.99, my degree
+                        allowed me to deepen
+                        my understanding of computer science fundamentals while specializing in MERN stack development. I
+                        mastered technologies such as React.js, Node.js, Express.js, and MongoDB, which enabled me to build
+                        full-stack, scalable, and dynamic web applications. Throughout my academic journey, I not only
+                        strengthened my technical expertise but also enhanced my teamwork, communication, and project
+                        management skills through various academic projects and real-world problem-solving experiences.
+                    </p>
+                </div>
+            </div>
+        </section> 
     </main>
 </body>
 
