Update portfolio content and improve styling for better presentation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </path>
             </g>
         </svg>
-        <button class="button" >Get My Resume <i class="ri-arrow-drop-up-line"></i> </button>
+        <button class="button">Get My Resume <i class="ri-arrow-drop-up-line"></i> </button>
     </nav>
     <main>
         <section class="page1">
@@ -83,7 +83,7 @@
         </section>
         <section class="page4">
             <div class="page4-top">
-                <div class="page4-top-left" >
+                <div class="page4-top-left">
                     <h1>Education</h1>
                 </div>
                 <div class="page4-arrow">
@@ -98,45 +98,52 @@
                     <h1>🎓 Diploma in Computer Science </h1>
                     <h2>2018-2021</h2>
                     <p>
-                        
-                           <!-- Diploma in Computer Science Engineering -->
 
-                        🏫 Education:- I pursued my Diploma in Computer Science Engineering at People's University from 2018
+                        <!-- Diploma in Computer Science Engineering -->
+
+                        🏫 Education:- I pursued my Diploma in Computer Science Engineering at People's University from
+                        2018
                         to 2021, where
                         I developed a strong foundation in Web development and programming concepts. With a CGPA of
-                        7.67, I focused on building practical knowledge through projects and coursework. During this period,
+                        7.67, I focused on building practical knowledge through projects and coursework. During this
+                        period,
                         I discovered my passion for frontend development, gaining hands-on experience with HTML, CSS,
-                        JavaScript, and React.js. This journey shaped my ability to design responsive and interactive web
+                        JavaScript, and React.js. This journey shaped my ability to design responsive and interactive
+                        web
                         applications, while also improving my problem-solving and analytical thinking skills.
                     </p>
-                </div> 
-                 <div class="page4-right">
+                </div>
+                <div class="page4-right">
                     <h1>🎓 Bachelor of Technology </h1>
                     <h2>2021-2024</h2>
                     <p>
-                        
+
                         <!-- 🎓 Bachelor of Technology in Computer Science Engineering -->
 
                         🏫 Education:- I pursued my Bachelor of Technology in Computer Science Engineering at Sagar
-                        Institute of Research & Technology - Excellence From 2021 to 2024. With a CGPA of 6.99, my degree
+                        Institute of Research & Technology - Excellence From 2021 to 2024. With a CGPA of 6.99, my
+                        degree
                         allowed me to deepen
-                        my understanding of computer science fundamentals while specializing in MERN stack development. I
-                        mastered technologies such as React.js, Node.js, Express.js, and MongoDB, which enabled me to build
+                        my understanding of computer science fundamentals while specializing in MERN stack development.
+                        I
+                        mastered technologies such as React.js, Node.js, Express.js, and MongoDB, which enabled me to
+                        build
                         full-stack, scalable, and dynamic web applications. Throughout my academic journey, I not only
                         strengthened my technical expertise but also enhanced my teamwork, communication, and project
                         management skills through various academic projects and real-world problem-solving experiences.
                     </p>
                 </div>
             </div>
-        </section> 
-        <section class="page5" >
+        </section>
+        <section class="page5">
             <div class="page5-container">
-                <div class="box active " style="background-image: url(./images/mern-img.png);" ></div>
-                <div class="box" style="background-image: url(./images/mongodb-img.jpg);" ></div>
-                <div class="box" style="background-image: url(./images/expressjs-img.jpg);" ></div>
-                <div class="box" style="background-image: url(./images/reactjs-img.webp);" ></div>
-                <div class="box" style="background-image: url(./images/nodejs-img.jpg);" ></div>
+                <div class="box active " style="background-image: url(./images/mern-img.png);"></div>
+                <div class="box" style="background-image: url(./images/mongodb-img.jpg);"></div>
+                <div class="box" style="background-image: url(./images/expressjs-img.jpg);"></div>
+                <div class="box" style="background-image: url(./images/reactjs-img.webp);"></div>
+                <div class="box" style="background-image: url(./images/nodejs-img.jpg);"></div>
             </div>
+            <h1>This is my portfolio, created with lots of love, Hope you like it.❤️</h1>
         </section>
     </main>
     <script src="script.js"></script>t
